# epux

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sync_db.py
docs/superpowers/plans/: 2026-07-15-ielts-grading-v2.md
docs/superpowers/specs/: 2026-07-15-ielts-grading-v2-design.md
epux/: cli.py  config.py  db.py  descriptors.py  game.py  llm.py  notifications.py  server.py  srs.py  task1.py  task2.py  vocab_sources.py
epux/web/: app.js  index.html  sfx.js  style.css
legacy/: audio.py  cli.py  config.py  db.py  notifications.py  ollama.py  pronunciation.py  sample_data.py  speech.py  srs.py  tts.py  tui.py
scripts/: install_reminder_task.ps1  uninstall_reminder_task.ps1
tests/: test_grading_helpers.py  test_llm_helpers.py  test_vocab_sources.py
